<resources>
    <string name="app_name">Aprovado</string>
    <string name="title_activity_about">Aprovado</string>

    <string name="url_activity_about">"file:///android_asset/about_pt.html"</string>
    <string name="about_action_rate">Avaliar</string>

    <string name="hello_world">Hello</string>
    <string name="action_settings">Sobre</string>

    <string name="tablebar_header_calculator">Calculadora</string>
    <string name="tablebar_header_classes">Disciplinas</string>

    <string name="recyclrview_label_teacher">Professor: </string>
    <string name="recyclrview_label_mb1">MB1: </string>
    <string name="recyclrview_label_mb2">MB2: </string>
    <string name="recyclrview_label_mf">MF: </string>

    <string name="calculator_dialog_title">Simulação</string>
    <string name="calculator_edittext_error_message">Campo Obrigatório!</string>
    <string name="calculator_dialog_unpassed">Você não tem mais condições de ser aprovado!</string>
    <string name="calculator_dialog_to_approve">Nota Bimestral mínima: </string>
    <string name="calculator_dialog_to_approve_final">Nota B2 mínima: </string>

    <string name="courselist_snackbar_title">foi removido!</string>
    <string name="courselist_snackbar_itens">itens removidos!</string>
    <string name="activity_course_class">Disciplina</string>
    <string name="activity_course_teacher">Professor</string>

    <string name="fragment_courses_list_undo">Desfazer</string>

    <string name="fragment_calculator_score_m1">Nota M1</string>
    <string name="fragment_calculator_score_m2">Nota M2</string>
    <string name="fragment_calculator_score_b1">Nota B1</string>
    <string name="fragment_calculator_score_b2">Nota B2</string>
    <string name="fragment_calculator_average_b1">Média B1</string>
    <string name="fragment_calculator_average_b2">Média B2</string>
    <string name="fragment_calculator_final_average">Média Final</string>

    <string name="fragment_calculator_simulate_score_b1">Simular Nota B1</string>
    <string name="fragment_calculator_simulate_score_b2">Simular Nota B2</string>
    <string name="fragment_calculator_simulate_score_final_average">Simular M.Final</string>

    <string name="card_item_label_approved">Aprovado</string>
    <string name="card_item_label_unapproved">Reprovado</string>
    <string name="imageview_card_item_approved">image card</string>

    <string-array name="semester_array">
        <item>1º Semestre</item>
        <item>2º Semestre</item>
        <item>3º Semestre</item>
        <item>4º Semestre</item>
        <item>5º Semestre</item>
        <item>6º Semestre</item>
        <item>7º Semestre</item>
        <item>8º Semestre</item>
        <item>9º Semestre</item>
        <item>10º Semestre</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_nav_sync_data">Sincronizar dados</string>
    <string name="title_nav_feedback">Feedback</string>
    <string name="title_nav_about">Sobre</string>
    <string name="button_label_clean_fields">Limpar Notas</string>
    <string name="email_fake">aprovado.app@android.com</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="dialog_button_revoke">Revoke Access</string>
    <string name="dialog_button_sign_out">Sign Out</string>
    <string name="navigation_menu_item_login">Sign in</string>
    <string name="nav_menu_item_sign_in_label">Sign in</string>
    <string name="nav_menu_item_sign_out_label">Sign out</string>
    <string name="dialog_progress_message">Loading....</string>
    <string name="title_nav_drive_sign_in">Google Drive Sign in</string>
    <string name="alert_dialog_error_drive_message">Ocorreu uma falha na conexão com o Google Drive! Por favor tente novamente mais tarde.</string>
    <string name="alert_dialog_error_drive_title">Erro no Google Drive!</string>
    <string name="progress_message_downloading_data">Downloading data..</string>
    <string name="progress_message_syncing_data">Syncing data...</string>
</resources>
