<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginEnd="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginStart="5dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/hello_world"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000" />

        <View
            android:id="@+id/viewSeparador"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="end"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_card_item"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="0"
                android:contentDescription="@string/imageview_card_item_approved" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/labelProfessor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/recyclrview_label_teacher"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#aaa" />

                    <TextView
                        android:id="@+id/txtProfessor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/hello_world"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#aaa" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/labelMB1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/recyclrview_label_mb1"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#aaa" />

                    <TextView
                        android:id="@+id/txtMB1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/hello_world"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#aaa" />

                    <TextView
                        android:id="@+id/labelMB2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/recyclrview_label_mb2"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#aaa" />

                    <TextView
                        android:id="@+id/txtMB2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/hello_world"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#aaa" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/labelMF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/recyclrview_label_mf"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#aaa" />

                    <TextView
                        android:id="@+id/txtMF"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/hello_world"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#aaa" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView_card_item_approved"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/ColorPrimary"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/card_item_label_approved"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>