<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:id="@+id/calculator"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/EditTextTheme">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textView_m1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/fragment_calculator_score_m1" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textView_b1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/fragment_calculator_score_b1" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textView_mb1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/fragment_calculator_average_b1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/editText_m1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:maxLength="3"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:hint="@string/fragment_calculator_score_m1"
                        android:imeOptions="actionNext"
                        android:textColorSecondary="@color/ColorPrimary" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/editText_b1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:hint="@string/fragment_calculator_score_b1"
                        android:nextFocusDown = "@+id/editText_m2"
                        android:inputType="numberDecimal" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/editText_mb1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:hint="@string/fragment_calculator_average_b1"
                        android:enabled="false"/>

                </LinearLayout>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    card_view:cardCornerRadius="4dp"
                    android:layout_gravity="center">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textview_simulate_b1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="@string/calculator_dialog_to_approve" />

                </android.support.v7.widget.CardView>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textView_m2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/fragment_calculator_score_m2" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textView_b2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/fragment_calculator_score_b2" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textView_mb2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/fragment_calculator_average_b2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/editText_m2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:hint="@string/fragment_calculator_score_m2"
                        android:imeOptions="actionNext" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/editText_b2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:hint="@string/fragment_calculator_score_b2"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/editText_mb2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:hint="@string/fragment_calculator_average_b2"
                        android:enabled="false"/>

                </LinearLayout>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    card_view:cardCornerRadius="4dp"
                    android:layout_gravity="center">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textview_simulate_b2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="@string/calculator_dialog_to_approve" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/textView_mf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/fragment_calculator_final_average" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editText_mf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:hint="@string/fragment_calculator_final_average"
                    android:enabled="false"/>


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    card_view:cardCornerRadius="4dp"
                    android:layout_gravity="center">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/textview_simulate_mf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="@string/calculator_dialog_to_approve_final" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
